# ester

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  INSTALL  Jenkinsfile  Makefile.am  NEWS  README  README.md  VERSION  bootstrap  config.h.in  configure.ac  default.nix  index.html  mainpage.dox  overview.dox  package.nix  params.json  version.m4
cesam/: Makefile.am  abon_ini.f  add_ascii.f  alecian1.f  atm.f  base_chim.f  base_rota.f  boite.f  box.f  bsp1ddn.f  bsp1dn.f  bsp_dis.f  bval0.f  cesam.h  cesam2k-dbg.f  cesam2k.f  cesamT-dbg.f  cesamT.f  chim_gram.f  coeff_rota.f  coeff_rota3.f  coll.f  coll_atm.f  coll_qs.f  collision.f  colpnt.f  conv.f  conv_a0.f  conv_cgm_reza.f  conv_cgm_reza_r.f  conv_cm_reza.f  conv_cml.f  conv_jmj.f  ctes_85.f  des.f  df_rotx.f  dgrad.f  diffm.f  diffm_br.f  diffm_mp.f  (+137 more)
lib-example/: Makefile.am
lib-example/src/: poly.h  polytrope.cpp  polytrope1d.cpp  polytrope2d.cpp  polytrope2d_final.cpp
python/: CMakeLists.txt  Makefile.am  cesam.in  ester.i  ester.in  ester_visu.in  ester_wrap.cxx  ester_wrap.i  ester_wrap.py  num.in  read-hdf5.in  read_hdf5.py  star.py
src/: Makefile  Makefile.am  dummy.cpp  make.inc.gcc  make.inc.icc  make_gcc.inc  make_icc.inc
src/cesam/: Makefile.am  abon_ini.f  alecian1.f  arb_rom.f  ascii.f  atm.f  boite.f  box.f  cesam.f  chim_gram.f  coeff_rota4.f  coeff_vth.f  coll_atm.f  conv.f  conv_a0.f  conv_cm.f  conv_cm_reza0206.f  conv_cml.f  conv_jmj.f  coulomb.f  ctes_94.f  des.f  des_m.f  des_r.f  dgrad.f  difdiv.f  diffm_br.f  difft_smc.f  difft_sun.f  difft_ventura.f  diffus.f  diffw.f  diffw_mpz.f  diffw_p03.f  ecrit_ascii.f  ecrit_rota.f  edding.f  eq_ini_rota4.f  etat_eff.f  etat_gong2.f  (+70 more)
src/global/: Makefile  constants.h  create_map.h  debug.h  ester.h  global.cpp  version.h
src/graphics/: Makefile  graphics.cpp  graphics.h  matplotlib.cpp  matplotlib.h
src/include/: constants.h  debug.h  ester.h  graphics.h  lapack.h  mapping.h  matrix.h  numdiff.h  parser.h  physics.h  read_config.h  solver.h  stack.h  star.h  symbolic.h  utils.h
src/main/: Makefile  cesam_to_ester.in  ester-info.cpp  ester.in  ester.py  ester_info.cpp  evol1d.cpp  gen_output.cpp  polytrope1d.cpp  polytrope2d.cpp  read_config.cpp  star1d.cpp  star2d.cpp  star_evol.cpp  version.cpp  vtk.cpp
src/mapping/: Makefile  mapping.cpp  mapping.h  mapping_redist.cpp  remapper.cpp
src/matrix/: Makefile  mat_math.cpp  mat_spec.cpp  matrix.cpp  matrix.h  matrix_block_diag.cpp  matrix_map.cpp
src/numdiff/: Makefile  diff_gl.cpp  diff_leg.cpp  numdiff.h
src/parser/: Makefile  iofile.cpp  parser.cpp  parser.h
src/physics/: EOS5_xtrin.F  Makefile  Makefile.am  ZFS_interp_EOS5.F  atm_onelayer.cpp  bicub_db.f  cesam.h  cesam_interface.cpp  composition.cpp  cubic_interpolator.f90  eos_freeeos.cpp  eos_ideal.cpp  eos_idealrad.cpp  eos_opal.cpp  eos_test.cpp  evol_cesam.F90  init_comp.cpp  mesa_opacity_modules.F90  nuc_cesam.cpp  nuc_cesam_for.F  nuc_cesam_for.F90  nuc_simple.cpp  nuc_test.cpp  opa_cesam.cpp  opa_cesam_for.F90  opa_houdek.cpp  opa_kramer.cpp  opa_mesa.cpp  opa_mesa_for.F90  opa_opal.cpp  opa_opals.cpp  opa_opmesa.F90  opa_opmesa.cpp  opa_opmono.F90  opa_opmono.cpp  opa_test.cpp  opmono_modules.F90  physics.cpp  physics.h  read_hdf5_data.cpp  (+1 more)
src/solver/: Makefile  RKF_solver.cpp  SDIRK_solver.cpp  solver.cpp  solver.h  solver_add.cpp  solver_full.cpp
src/star/: EC.cpp  Makefile  convection.cpp  polytrope.cpp  star.h  star1d_atm.cpp  star1d_class.cpp  star1d_extra.cpp  star1d_phys.cpp  star1d_solvers.cpp  star1d_solvers_ZC_1st.cpp  star1d_solvers_ZC_2nd.cpp  star2d_atm.cpp  star2d_class.cpp  star2d_extra.cpp  star2d_map_jacobian.cpp  star2d_phys.cpp  star2d_solvers.cpp  star_evol.cpp  star_map.cpp  star_phys.cpp
src/symbolic/: Makefile  rational.cpp  sym.cpp  sym_expr.cpp  sym_tens.cpp  sym_vec.cpp  symbolic.cpp  symbolic.h
src/utils/: debug.cpp  iofile.cpp  parser.cpp  stack.cpp
tables/: CMakeLists.txt  Makefile  Makefile.am
tables/cesam/: Makefile.am  ini_ctes.f  inter.f  mod_kind.f  mod_nuc.f  mod_numerique.f  mod_opa.f  mod_variables.f  print_ctes.f  sortie.f  test_opa.f  z14xcotrin21.f
tables/cesam_nuc/: Makefile  Makefile.am  Makefile.common  abon_ini.f  gauss_band.f  horner.f  ini_ctes.f  lit_nl.f  mod_donnees.f  mod_nuc.f  mod_numerique.f  newton.f  nuc.f  ppcno10.f  ppcno3a12Ne.f  ppcno3aco.f  ppcno9.f  rq_reac.f  sortie.f  sum_n.f  tabul_nuc.f  taux_nuc.f  test_tabul_reac.f
tables/freeeos/: Makefile.am  aux_scale.h  aux_to_traditional.f  bfgs.f  bfgs.h  constants.h  coulomb.f  coulomb_adjust.f  deriv_product.f  deriv_ratio.f  diagnostics.h  eff_fit.h  effective_radius.f  effsum_calc.f  eos_bfgs.f  eos_calc.f  eos_cold_start.f  eos_free_calc.f  eos_free_calc_argument.h  eos_jacobian.f  eos_sum_calc.f  eos_tqft.f  eos_tqsum_calc.f  eos_warm_step.f  exchange_coeff.f  exchange_gcpf.f  excitation_block.h  excitation_pi.f  excitation_pi_end.f  excitation_sum.f  exct_calc.f  f_psi.f  fermi_dirac.f  fermi_dirac_coeff.f  fermi_dirac_ct.f  fermi_dirac_direct.f  fermi_dirac_exchange.f  fermi_dirac_minusnr_coeff.f  fermi_dirac_original_coeff.f  fermi_dirac_recursion.f  (+30 more)
tables/lowT_F05/: lowT_fa05_a09p_z0.02_x0.0.data  lowT_fa05_a09p_z0.02_x0.1.data  lowT_fa05_a09p_z0.02_x0.2.data  lowT_fa05_a09p_z0.02_x0.35.data  lowT_fa05_a09p_z0.02_x0.5.data  lowT_fa05_a09p_z0.02_x0.7.data  lowT_fa05_a09p_z0.02_x0.8.data  lowT_fa05_a09p_z0.02_x0.9.data  lowT_fa05_a09p_z0.02_x0.95.data  lowT_fa05_a09p_z0.02_x0.98.data  lowT_fa05_gn93_z0.02_x0.2.data  lowT_fa05_gn93_z0.02_x0.35.data  lowT_fa05_gn93_z0.02_x0.95.data  lowT_fa05_gn93_z0.02_x0.98.data
tables/mesa/: variables_ester_and_mesa.f90
tables/op_mono/: OP_lkap_A09_X0.000Z0.020.txt  OP_lkap_A09_X0.050Z0.020.txt  OP_lkap_A09_X0.100Z0.020.txt  OP_lkap_A09_X0.150Z0.020.txt  OP_lkap_A09_X0.200Z0.020.txt  OP_lkap_A09_X0.250Z0.020.txt  OP_lkap_A09_X0.300Z0.020.txt  OP_lkap_A09_X0.350Z0.020.txt  OP_lkap_A09_X0.400Z0.020.txt  OP_lkap_A09_X0.450Z0.020.txt  OP_lkap_A09_X0.500Z0.020.txt  OP_lkap_A09_X0.550Z0.020.txt  (+11 more)
utils/: Makefile.am  app_luminosity.cpp  ester_build  script
(+4423 files in other folders)
